--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "lenis": "^1.1.13"
   }
 }
