--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "lenis": "^1.1.13"
+    "lenis": "^1.1.13",
+    "swiper": "^11.1.12"
   }
 }
